tests/snapshots/options__opt_no_clear_if_empty@001.snap
---
source: tests/options.rs
description: "input: interactive\noptions: -i --no-clear-if-empty -c printf {q} --cmd-query xxxx"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> xxxx                                                                          "
"  1/1                                                                        0/0"
"c> xxxx                                                                         "
cursor: (24, 8)
