tests/snapshots/options__opt_no_clear_if_empty@002.snap
---
source: tests/options.rs
description: "input: interactive\noptions: -i --no-clear-if-empty -c printf {q} --cmd-query xxxx\nafter:\n  @ctrl 'w'"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> xxxx                                                                          "
"  0/0                                                                        0/0"
"c>                                                                              "
cursor: (24, 4)
