tests/snapshots/options__opt_no_sort-2.snap
---
source: tests/options.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  cc                                                                            "
"  bc                                                                            "
"> ac                                                                            "
"  3/3                                                                        0/0"
"> c                                                                             "
cursor: (3, 23)
