tests/snapshots/options__opt_no_sort.snap
---
source: tests/options.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  cc                                                                            "
"  bc                                                                            "
"> ac                                                                            "
"  3/3                                                                        0/0"
">                                                                               "
cursor: (24, 3)
