tests/snapshots/options__opt_no_sort@001.snap
---
source: tests/options.rs
description: "input: items [\"ac\", \"bc\", \"cc\"]\noptions: --no-sort"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  cc                                                                            "
"  bc                                                                            "
"> ac                                                                            "
"  3/3                                                                        0/0"
">                                                                               "
cursor: (24, 3)
