tests/snapshots/options__opt_no_sort@002.snap
---
source: tests/options.rs
description: "input: items [\"ac\", \"bc\", \"cc\"]\noptions: --no-sort\nafter:\n  @char 'c'"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  cc                                                                            "
"  bc                                                                            "
"> ac                                                                            "
"  3/3                                                                        0/0"
"> c                                                                             "
cursor: (24, 4)
